@@ -2277,8 +2277,6 @@ QString Protocol::formatHtmlText( const QString& text )
 }
 
 /* Encryption */
-static QByteArray test_1;
-
 QByteArray Protocol::generatePrivateKey() const
 {
   return generateECDHRandomPrivateKey();
@@ -2286,7 +2284,11 @@ QByteArray Protocol::generatePrivateKey() const
 
 QByteArray Protocol::generatePublicKey( const QByteArray& private_key ) const
 {
-  return generateECDHPublicKey( private_key );
+  QByteArray pub_key_tmp = generateECDHPublicKey( private_key );
+  if( Settings::instance().connectionKeyExchangeMethod() == Settings::ConnectionKeyExchangeECDH_K233 )
+    return pub_key_tmp;
+  else
+    return Settings::instance().simpleHash( QString::fromLatin1( pub_key_tmp.toHex() ) ).toLatin1();
 }
 
 QByteArray Protocol::generateSharedKey( const QByteArray& private_key, const QByteArray& public_key, int proto_version, int data_stream_version ) const
@@ -2297,7 +2299,7 @@ QByteArray Protocol::generateSharedKey( const QByteArray& private_key, const QBy
 #else
   QCryptographicHash ch( data_stream_version < 13 ? QCryptographicHash::Sha1 : QCryptographicHash::Sha3_256 );
 #endif
-  if( proto_version >= SECURE_LEVEL_4_PROTO_VERSION )
+  if( proto_version >= SECURE_LEVEL_4_PROTO_VERSION && Settings::instance().connectionKeyExchangeMethod() == Settings::ConnectionKeyExchangeECDH_K233 )
   {
     QByteArray shared_key = generateECDHSharedCipherKey( private_key, public_key );
     if( shared_key.isEmpty() )
