@@ -56,6 +56,9 @@ public:
   inline bool firstTime() const;
   inline void setFirstTime( bool );
 
+  enum ConnectionKeyExchangeMethod { ConnectionKeyExchangeDefault, ConnectionKeyExchangeECDH_K233, NumConnectionKeyExchangeMethods };
+  ConnectionKeyExchangeMethod connectionKeyExchangeMethod() const;
+
   enum UserRecognitionMethods { RecognizeByDefaultMethod, RecognizeByAccountAndDomain, RecognizeByAccount,
                                 RecognizeByNickname, NumUserRecognitionMethods };
   void setUserRecognitionMethod( int );
@@ -725,6 +728,8 @@ private:
 
   QStringList m_skipLocalHardwareAddresses;
   QStringList m_allowedFileExtensionsInFileTransfer;
+
+  int m_connectionKeyExchangeMethod;
 
   bool m_rcFileExists;
 
@@ -1419,5 +1424,6 @@ inline bool Settings::useUserFirstNameFirstInFullName() const { return m_useUser
 inline const QStringList& Settings::allowedFileExtensionsInFileTransfer() const { return m_allowedFileExtensionsInFileTransfer; }
 inline void Settings::setResetMinimumWidthForStyle( bool new_value ) { m_resetMinimumWidthForStyle = new_value; }
 inline bool Settings::resetMinimumWidthForStyle() { return m_resetMinimumWidthForStyle; }
+inline Settings::ConnectionKeyExchangeMethod Settings::connectionKeyExchangeMethod() const { return m_connectionKeyExchangeMethod == 1 ? ConnectionKeyExchangeECDH_K233 : ConnectionKeyExchangeDefault; }
 
 #endif // BEEBEEP_SETTINGS_
